--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,10 +1,14 @@
 <h1>Add new user</h1>
 <form action="<%= users_url %>" method="POST">
+    <input type="hidden" name="authenticity_token" value="<%= form_authenticity_token %>">
     <label>Username
         <input type="text" name="user[username]" value=<%= @user.username %>>
     </label>
     <label>Email
         <input type="text" name="user[email]" value=<%= @user.email %> >
+    </label>
+    <label>Password
+        <input type="password" name="user[password]" value="" >
     </label>
     <button type="submit">Create user</button>
 </form>
